--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit
-streamlit-webrtc
-opencv-python-headless
-numpy
-pandas
-scikit-learn
-fpdf
-email-validator
-matplotlib
+streamlit==1.25.0
+opencv-python-headless==4.8.0.76
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+fpdf==1.7.2
+Pillow==9.5.0
